# link-shortener

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 9cd5a15b229c_add_users_table_and_link_fk.py  d58020829ece_create_links_table.py
app/: config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py  middleware.py
app/models/: __init__.py  link.py  user.py
app/routers/: auth.py  health.py  links.py  metrics.py
app/schemas/: link.py  user.py
app/services/: auth.py  link.py  user.py
docker/: Caddyfile  backup.sh  entrypoint.sh
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/dashboards/link-shortener/: link-shortener.json
docker/grafana/provisioning/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
docs/: deploy.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx  setupTests.ts  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  links.ts  types.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/components/: CopyButton.tsx  ErrorMessage.tsx  Footer.tsx  Header.tsx  Layout.tsx  LinkForm.tsx  LinkTable.tsx  Pagination.test.tsx  Pagination.tsx  Spinner.tsx
frontend/src/i18n/: de.json  index.ts
frontend/src/lib/: errors.test.ts  errors.ts  validation.test.ts  validation.ts
frontend/src/pages/: AboutPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
tests/: conftest.py
tests/integration/: test_auth_router.py  test_dependencies.py  test_health_router.py  test_links_router.py  test_logging_middleware.py  test_metrics_endpoint.py  test_metrics_instrumentator.py
tests/unit/: test_auth_service.py  test_link_service.py  test_logging_config.py  test_metrics.py  test_middleware.py  test_schemas.py  test_user_service.py
