[project]
name = "link-shortener"
version = "0.1.0"
description = "Сокращатель ссылок — пет-проект для изучения FastAPI, Docker и Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

# Зависимости для разработки (линтер/форматтер). Ставятся через `uv sync`,
# но НЕ попадают в продакшн-образ Docker.
[dependency-groups]
dev = [
    "ruff>=0.9",
]

# --- Конфиг Ruff: и линтер, и форматтер в одном инструменте ---
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E,F  — базовые ошибки (pyflakes/pycodestyle)
# I    — сортировка импортов (замена isort)
# UP   — подсказки по современному синтаксису Python
# B    — частые баги (flake8-bugbear)
select = ["E", "F", "I", "UP", "B"]
# B008 — Depends() в аргументах функции. В FastAPI это стандартный паттерн (dependency injection),
# ruff этого не знает и ругается.
ignore = ["B008"]
